--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang='en'>
   <head>
+    <title>Crystal B.</title>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
   </head>
   <body>
-
+    <h1>Hello, Code School!</h1>
+    <ul>
+        <li>JavaScript</li>
+        <li>Git</li>
+        <li>Sass</li>
+        <li>jQuery</li>
+        <li>Angular</li>
+        <li>Node.js</li>
+    </ul>
   </body>
 </html>
